build_errors.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
.\gradlew : C:\Users\Laptop\
AndroidStudioProjects\MySoft
POS\app\src\main\java\com\ex
ample\mysoftpos\testsuite\Te
stRunnerActivity.java:133: 
error: cannot find symbol
At line:1 char:1
+ .\gradlew 
compileDebugJavaWithJavac 
2>&1 | Out-File -FilePath 
".\buil ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo          
    : NotSpecified: (C:\Us  
  ers\Laptop...not find s   
 ymbol:String) [], Remot    
eException
    + FullyQualifiedErrorId 
    : NativeCommandError
 
        tvPosEntryMode = fin
dViewById(R.id.tvPosEntryMod
e);
                            
              ^
  symbol:   variable 
tvPosEntryMode
  location: class id
1 error

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/Laptop/AndroidStudioProjects/MySoftPOS/build/reports/problems/problems-report.html

FAILURE: Build failed with 
an exception.

* What went wrong:
Execution failed for task ':
app:compileDebugJavaWithJava
c'.
> Compilation failed; see 
the compiler output below.
  C:\Users\Laptop\AndroidStu
dioProjects\MySoftPOS\app\sr
c\main\java\com\example\myso
ftpos\testsuite\TestRunnerAc
tivity.java:133: error: 
cannot find symbol
          tvPosEntryMode = f
indViewById(R.id.tvPosEntryM
ode);
                            
                ^
    symbol:   variable 
tvPosEntryMode
    location: class id
  1 error

* Try:
> Check your code and 
dependencies to fix the 
compilation error(s)
> Run with --scan to get 
full insights.

BUILD FAILED in 3s
19 actionable tasks: 1 executed, 18 up-to-date
